add init-files DIRectory option, update tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: generic
 
 script:
   - ./tests/test_init.sh
+  - ./tests/test_init-files.sh
   - ./tests/test_simple.sh
   - ./tests/test_advanced.sh
   - ./tests/test_version_attributes.sh
