fix issue #3 - multiple statements of same MKIAPP_FILE_ now work

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ script:
   - ./tests/test_simple.sh
   - ./tests/test_advanced.sh
   - ./tests/test_version_attributes.sh
+  - ./tests/test_multiple_MKIAPP_FILE.sh
